<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.products.ProductDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/back_guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <ImageView
        android:id="@+id/detail_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/cardview_shadow_start_color"
        android:contentDescription="@string/image_of_gousto_product"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_loading"
        app:layout_constraintBottom_toTopOf="@id/image_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back_button"
        app:layout_constraintBottom_toBottomOf="@id/back_guideline_horizontal"
        app:layout_constraintEnd_toStartOf="@id/back_guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:textAlignment="center"
                android:textSize="22sp"
                tools:text="Product Title which is very long and runs off the side of the screen to a new line" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:padding="@dimen/medium_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/medium_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/medium_margin"
                        android:text="@string/product_details"
                        android:textColor="@color/titleTextColour"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Product Description which is very long and runs off the side of the screen to a new line " />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>